erDiagram
    Country ||--o{ Outlet : "has"
    Country ||--o{ CountryLocale : ""
    Locale  ||--o{ CountryLocale : ""
    Country ||--o{ MenuItemCountryPrice : "prices"
    Country ||--o{ FeatureFlag : "scopes"
    MenuItem ||--o{ MenuItemTranslation : "in"
    MenuItem ||--o{ MenuItemCountryPrice : "priced"
    MenuItem ||--o{ MenuItemCustomisationGroup : "uses"
    MenuItem }o--|| Category : "of"
    Category ||--o{ CategoryTranslation : "in"
    CustomisationGroup ||--o{ CustomisationOption : "has"
    CustomisationGroup ||--o{ CustomisationGroupTranslation : "in"
    CustomisationOption ||--o{ CustomisationOptionTranslation : "in"
    CustomisationOption ||--o{ CustomisationOptionCountryPrice : "priced"
    User    ||--o{ Cart : "owns"
    Cart    ||--o{ CartItem : "contains"
    User    ||--o{ Order : "places"
    Order   ||--o{ OrderItem : "lines"
    Order   ||--o{ OrderStatusEvent : "audit"
    Order   }o--|| Voucher : "redeems"
    Voucher ||--o{ VoucherCountry : "in"
    Voucher ||--o{ VoucherRedemption : "tracked by"
